Fonts import fix and About section spacing fix

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -6,6 +6,7 @@ body {
     color: $color-dark;
     font-family: 'Montserrat', sans-serif;
     overflow-x: hidden;
+    font-weight: 500;
 }
 
 body a {
@@ -115,13 +116,14 @@ i {
     padding: .5rem 2.75rem;
     background: $color-dark;
     color: #FFF;
+    font-weight: 600;
 }
 
 header {
     transition: background-color .3s ease-in-out;
     background: $color-dark;
     text-transform: uppercase;
-    font-weight: bold;
+    font-weight: 700;
     .social-links-fixed {
         right: -40px;
         transition: right .3s ease-in-out;
@@ -319,7 +321,6 @@ header {
 #about {
     h2 {
         position: relative;
-        margin-bottom: 30px;
         .initial {
             background-color: $color-yellow;
             width: 1em;
@@ -448,11 +449,16 @@ header {
         padding: 15px 0px;
         p {
             margin-bottom: 2px;
-            font-weight: bold;
+            font-weight: 700;
         }
         a {
             display: block;
             margin-bottom: 10px;
+            @media all and (max-width: 768px) {
+                font-size: .825rem;
+                margin-bottom: 20px;
+                margin-top: 5px;
+            }
         }
     }
 
@@ -466,7 +472,7 @@ header {
     }
     .social-links li {
         margin: 0px 30px 0 0!important;
-    }
+    }    
 }
 
 #bottom {
@@ -488,12 +494,15 @@ header {
         }
         small {
             font-size: .7rem;
+            font-weight: 500;
         }
         a { 
             display: block;
+            font-weight: 500;
         }
     }
     small {
+        font-weight: 600;
         &.made-with {
             span:first-of-type {
                 color: $color-dark;
